<resources>
    <string name="app_name">ArtFlow</string>
    <string name="artist_login">Artist Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="customer_login">Customer Login</string>
    <string name="customer_signup">Customer Signup</string>
    <string name="artist_signup">Artist Signup</string>
    <string name="my_artworks">My ArtWorks</string>
    <string name="add_artwork">+ ADD ArtWork</string>
    <string name="menu">Menu</string>
    <string name="dashboard">Dashboard</string>
    <string name="orders">Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="add_new_artwork">Add New Artwork</string>
    <string name="upload_artwork_image">Upload Artwork Image</string>
    <string name="tap_to_upload_image">Tap to upload image</string>
    <string name="select_image">Select Image</string>
    <string name="artwork_title">Artwork Title</string>
    <string name="description">Description</string>
    <string name="price_tk">Price </string>
    <string name="publish_artwork">Publish Artwork</string>
    <string name="artist_completed_orders">Artist Completed Orders</string>
    <string name="welcome_artist">Welcome, Artist!</string>
    <string name="total_artworks">Total Artworks</string>
    <string name="orders_label">Orders</string>
    <string name="earned_money">Earned Money</string>
    <string name="artist_dashboard">Artist Dashboard</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="welcome_customer">Welcome, Customer!</string>
</resources>